--- a/01-qr-code-component-main/index.html
+++ b/01-qr-code-component-main/index.html
@@ -5,6 +5,12 @@
     <meta name="description" content="QR Scan Code Project" />
     <title>QR Scan Code Project</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+			rel="stylesheet"
+		/>
   </head>
   <body>
     <div class="qr-scan">
