--- a/03-social-links-profile-main/index.html
+++ b/03-social-links-profile-main/index.html
@@ -16,7 +16,7 @@
   <body>
     <main class="container">
       <section class="user-image">
-        <img src="./assets/images/avatar-jessica.jpeg" />
+        <img src="./assets/images/avatar-jessica.jpeg" alt="Avatar Image" />
         <p class="name">Jessica Randall</p>
         <p class="location">London, United Kingdom</p>
         <p class="description">"Front-end developer and avid reader."</p>
